--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,46 @@ body{
 
 .input-box .show_hide{
   position: absolute;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #a6a6a6;
+  cursor: pointer;
+  padding: 5px;
 }
 
 .input-box input{
   height: 60px;
   width: 100%;
+  border: 2px solid #d3d3d3;
+  border-radius: 4px;
+  font-size: 18px;
+  font-weight: 500;
+  color: #333;
+  outline: none;
+  padding: 0 50px 0 16px;
+}
+
+.container .indicator{
+  display: none;
+}
+
+.container .indicator.active{
+  display: block;
+  margin-top: 14px;
+}
+
+.indicator .icon-text{
+  display: flex;
+  align-items: center;
+}
+
+.icon-text .error_icon{
+  margin-right: 8px;
+}
+
+.icon-text .text{
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
